==> lamik/Fishtank_computer/Src/FT_Gpu_Hal.c <==
#include "main.h"
#include "stm32f4xx_hal.h"
#include "spi.h"
#include "gpio.h"
#include <string.h>
#include "FT_Platform.h"

ft_bool_t Ft_Gpu_Hal_Open(Ft_Gpu_Hal_Context_t *host, SPI_HandleTypeDef *spi_handler )
{
	// SPI init with HAL

	// MX_SPI1_Init();
	host->hspi = spi_handler;

	return TRUE;
}

ft_void_t   Ft_Gpu_Hal_EndTransfer(Ft_Gpu_Hal_Context_t *host)
{

	HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_SET);	// Set chip select low

	host->status = FT_GPU_HAL_OPENED;
}

ft_void_t Ft_Gpu_HostCommand(Ft_Gpu_Hal_Context_t *host, ft_uint8_t cmd)
{

	uint8_t cTemp[3];														// FT800 Memory Address

	cTemp[0] = cmd;	// Compose the command and address to send
	cTemp[1] = 0x00;								// middle byte
	cTemp[2] = 0x00;

	HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_RESET);	// Set chip select low

	  for (int i = 2; i >= 0; i--)
		{
			HAL_SPI_Transmit(host->hspi, &cTemp[i], 1, 0); 			// Send Memory Write plus high address byte
		}
		HAL_GPIO_WritePin(FT800_CS_GPIO_Port, FT800_CS_Pin, GPIO_PIN_SET);	// Set chip select low

}

ft_void_t Ft_Gpu_Hal_Powercycle(ft_bool_t up)
{
	if (up)
	{
		HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_RESET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);
		HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_SET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);

	}else
	{
		HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_SET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);
    	HAL_GPIO_WritePin(FT800_PD_GPIO_Port, FT800_PD_Pin, GPIO_PIN_RESET);		// Set chip select high
        Ft_Gpu_Hal_Sleep(20);
	}
}
